@@ -8,6 +8,7 @@ require("prototypes.recipe.bobs-electrolysis")
 require("prototypes.recipe.logistic")
 require("prototypes.recipe.miner")
 require("prototypes.recipe.misc")
+
 -- -------------------------------------------
 
 -- recipe science ------------------------------
@@ -20,7 +21,6 @@ require("prototypes.sci.sci30extreme")
 
 if settings.startup["momo-harder-module"].value then
   require("prototypes.recipe.module")
-  
 end
 
 require("prototypes.expensive")
